Update CI to Ubuntu 22.04, Python 3.11, and dependency versions
- Bump CI environment to Ubuntu 22.04 and Python 3.11 for enhanced compatibility and performance.
- Upgrade `pre-commit` hooks versions, including `isort`, `black`, and `pyupgrade`.
- Update dependencies in `pyproject.toml`:
  - `kopf` to 1.37.2
  - `kubernetes_asyncio` to 30.3.1
  - `pydantic[email]` to 2.9.1
  - Added `pydantic-settings`.
- Refactor workflow creation and task status updates to improve handling of blocked and executing workflows.
- Set a maximum number of workflows executing simultaneously (`MAX_WORKFLOWS_EXECUTING`).
- Modify workflow and task creation to use reusable `get_custom_objects_api` with specific headers for API requests.
- Improve operator settings with increased `max_workers` and `request_timeout` values.

--- a/examples/01-helloworld/workflow.yaml
+++ b/examples/01-helloworld/workflow.yaml
@@ -1,7 +1,7 @@
 apiVersion: fastflow.dev/beta-1
 kind: Workflow
 metadata:
-  name: helloworld
+  generateName: helloworld-
 spec:
   dag: |+
     - name: helloworld
