--- a/examples/02-digraph/workflow.yaml
+++ b/examples/02-digraph/workflow.yaml
@@ -1,7 +1,7 @@
 apiVersion: fastflow.dev/beta-1
 kind: Workflow
 metadata:
-  name: digraph
+  generateName: digraph
 spec:
   global_inputs:
     siblings:
