--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ name = "python-fastflow"
 authors = [
     { name = "Steffen Vinther Sørensen", email = "svinther@gmail.com" },
 ]
-description = "A workflow engine based on kopf"
+description = "A workflow engine based on Kopf"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.9"
@@ -20,6 +20,7 @@ classifiers = [
     'Operating System :: OS Independent',
     'Programming Language :: Python',
     'Programming Language :: Python :: 3',
+    'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3 :: Only',
@@ -27,16 +28,17 @@ classifiers = [
 ]
 
 dependencies = [
-    'kopf==1.35.6',
-    'python-dotenv==0.20.0',
-    'kubernetes_asyncio==23.*',
+    'kopf==1.37.2',
+    'python-dotenv==1.0.1',
+    'kubernetes_asyncio==30.3.1',
     # This is for kopf https://kopf.readthedocs.io/en/stable/authentication/
-    'kubernetes==23.*',
-    'Jinja2==3.1.2',
-    'networkx==2.8.5',
-    'pydantic[email]==1.9.1',
-    'PyYAML',
-    'click'
+    'kubernetes==30.1.0',
+    'Jinja2==3.1.4',
+    'networkx==3.4.2',
+    'pydantic[email]==2.9.1',
+    'pydantic-settings==2.6.0',
+    'PyYAML==6.0.1',
+    'click==8.1.7'
 ]
 
 
@@ -63,7 +65,7 @@ pythonpath = 'test'
 [tool.mypy]
 warn_unused_configs = true
 warn_return_any = true
-python_version = "3.9"
+python_version = "3.11"
 
 [[tool.mypy.overrides]]
 module = [
