--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,6 +52,14 @@ repos:
       - id: rst-inline-touching-normal
       - id: text-unicode-replacement-char
 
+  - repo: https://github.com/PyCQA/autoflake
+    rev: v2.2.1
+    hooks:
+      - id: autoflake
+        name: autoflake
+        args: [ "--in-place", "--remove-unused-variables", "--remove-all-unused-imports" ]
+        language: python
+        files: \.py$
 
   - repo: https://github.com/PyCQA/isort
     rev: 5.13.2
@@ -64,8 +72,42 @@ repos:
     hooks:
       - id: black
         language_version: python3.11
+        args:
+          - -l
+          - "120"
 
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.19.0
     hooks:
       - id: pyupgrade
+
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.10.0
+    hooks:
+      - id: mypy
+        args:
+          - --no-strict-optional
+          - --ignore-missing-imports
+          - --install-types
+          - --non-interactive
+        additional_dependencies: [ tokenize-rt==5.2.0 ]
+
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.1.0
+    hooks:
+      - id: flake8
+        args:
+          - --max-line-length
+          - "120"
+
+  - repo: https://github.com/pryorda/dockerfilelint-precommit-hooks
+    rev: v0.1.0
+    hooks:
+      - id: dockerfilelint
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.1.0
+    hooks:
+      - id: prettier
+        types_or: [ css,less,scss,ts,tsx,graphql,javascript,jsx,markdown,asciidoc]
