--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,10 @@ pythonpath = 'test'
 warn_unused_configs = true
 warn_return_any = true
 python_version = "3.11"
+plugins = [
+    "pydantic.mypy"
+]
+
 
 [[tool.mypy.overrides]]
 module = [
