Refactor fastflow settings and enhance workflow management logic
- Updated `Settings` class in `setup.py` to centralize configuration, allowing settings for `namespace`, `kopf_priority`, `kopf_liveness_endpoint`, and max parallel workflows (`max_parallel_workflows`).
- Replaced `_kopf_kwargs` dictionary in `cli.py` with `get_kopf_kwargs()` method, enhancing maintainability and configuration.
- Introduced `_GLOBAL_WORKFLOW_LOCK` and `_GLOBAL_ACTIVE_WORKFLOWS_COUNT` in `engine.py` to handle concurrency issues in workflow execution and limit active workflows based on `max_parallel_workflows`.
- Implemented `kopf.on.startup()` function to count active workflows on startup, improving initial workflow state handling.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,10 @@ name: CI stuff
 on:
   push:
     branches:
-      - main
-  schedule:
-    - cron: "49 4 * * *"
+      - "**"
+#  schedule:
+#    - cron: "49 4 * * *"
+
 jobs:
   linters:
     name: Linting and static analysis
@@ -27,7 +28,7 @@ jobs:
         k8s: [latest, v1.30.5, v1.29.9, v1.28.13]
     name: K8s ${{matrix.k8s}}
     runs-on: ubuntu-22.04
-    timeout-minutes: 10  # usually 4-5 mins
+    timeout-minutes: 30  # usually 4-5 mins
     env:
       K8S: ${{ matrix.k8s }}
     steps:
