split lengthy src files into smaller ones.

--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -3,6 +3,6 @@ name: fastflow
 description: A Helm chart for Kubernetes deployment of Fastflow
 
 type: application
-version: 0.1.0
+version: 0.4.0
 
-appVersion: "0.0.3"
+appVersion: 0.4.0
