--- a/chart/templates/rbac/clusterrole.yaml
+++ b/chart/templates/rbac/clusterrole.yaml
@@ -1,3 +1,4 @@
+{{- if and (.Values.rbac.create) (.Values.rbac.clusterScope) }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -26,3 +27,4 @@ rules:
   - apiGroups: [fastflow.dev]
     resources: [workflows, tasks]
     verbs: [list, watch]
+  {{- end }}
