--- a/chart/templates/rbac/role.yaml
+++ b/chart/templates/rbac/role.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.rbac.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -34,3 +35,4 @@ rules:
 #  - apiGroups: [""]
 #    resources: [pods, persistentvolumeclaims]
 #    verbs: [create]
+  {{- end }}
