--- a/chart/templates/rbac/rolebinding.yaml
+++ b/chart/templates/rbac/rolebinding.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.rbac.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -9,3 +10,4 @@ roleRef:
   kind: Role
   name: fastflow
   apiGroup: rbac.authorization.k8s.io
+{{- end }}
